@@ -150,7 +150,7 @@
 				<version>3.8.1</version>
 				<configuration>
 					<source>9</source>
-					<target>9</target>
+					<target>9</target><compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
